* API change: Netzke widget's now should be declared directly in the views instead of controllers.
* API change: all ExtJS and Netzke JavaScript and styles are now loaded with the help of <tt>netzke_init</tt> helper.
* API change: <tt>persistence_key</tt> option replaces <tt>persistent_config_id</tt> option.
* Impr: headers in panels in the "config" mode now show the widget's global ID.

= v0.4.5.2 - 2009-11-09
* Fix: Hash#convert_keys and Array#convert_keys in core extensions are now renamed into deep_convert_keys, and now always plainly do what they're expected to do: recursively convert keys according to given block.

= v0.4.5.1 - 2009-11-09
* Regression: fixing inheritance and caching.
* FeedbackGhost is too simple to be a Netzke widget (having no server part), so, moved to static JavaScript.

= v0.4.5 - 2009-11-08
* API change: Netzke::Base: <tt>id_name</tt> accessor renamed to <tt>global_id</tt>
* Code: several internal code changes
* Code: lightly better test coverage
* New: <tt>Netzke::Base#global_id_by_reference</tt> method
* Compatibility: resolving conflicts with the <tt>api</tt> property in some Ext v3.0 components
* Fix: <tt>load_aggregatee_with_cache</tt> was throwing exception when the requested aggregatee wasn't defined
* New: <tt>persistent_config_id</tt> configuration option allows specifying an id by which persistent configuration is identified for the widget. Handy if different homogeneous widgets need to share the same persistent configuration.
* New: <tt>Netzke::Base#persistent_config</tt> method now accepts an optional boolean parameter signalizing that the configuration is global (not bound to a widget)
* Impr: cleaner handling of actions and toolbars; fbar configuration introduced.
* Impr: calling an API method now provides for the result value (if return by the server) in the callback.
* Impr: allows name spaced creation of Netzke widgets, e.g. widgets can now be defined under any module under Netzke, not only *directly* under Netzke.